2012-08-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

        [ftview] Implement adjustable stroker radius.

	* src/ftview.c (status): New field 'radius'.
	(Render_Stroke): Updated.
	(Process_Event): Add the keys 'r' and 'R' to handle the change.
	(event_radius_change): Implement it.
	(event_help): Updated.

2012-08-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

        [ftview] Use more readable loop.

	* src/ftview.c (main): use do-while instead of for-break.

2012-07-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

        [ftview] Clean up the code.

	* src/ftview.c (Render_Slanted): Move the shear matrix setup out of
	the loop.
	* src/ftview.c (Render_Embolden): Move the emboldening strength
	calculation out of the loop.

2012-07-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

        [ftview] Further code homogenization.

	* src/ftview.c (Render_Stroke): Stroker contructor and destructor
	are moved to...
	* src/ftcommon.c (FTDemo_New, FTDemo_Done): Here.
	* src/ftcommon.h (FTDemo_Handle): New field `stroker'.

2012-07-11  Werner Lemberg  <wl@gnu.org>

	Avoid crashes in case of failure.

	* src/ftcommon.c (FTDemo_Draw_Slot), src/ftgrid.c
	(grid_status_draw_outline), src/ftview.c (Render_Stroke): Only call
	`FT_Done_Glyph' in case of success.

2012-07-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

        [ftview] Clean up and homogenize the code.

        * src/ftview.c (Render_Stroke): Replace while-loop with for-loop.
	(Render_Slanted): Ditto.
	(Render_Embolden): Ditto.
	(Render_All): Ditto.
	(Render_Waterfall): Ditto.
	(Render_Stroke): Homogenize with other similar functions.
	(Render_Text): Code cleanup.
	(event_gamma_grid): Ditto.

2012-06-15  Werner Lemberg  <wl@gnu.org>

	* Version 2.4.10 released.
	==========================


	Tag sources with `VER-2-4-10'.

	* README: Updated.

2012-05-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Implement handling of FT_Outline_EmboldenXY.
